src/infra/iis-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iis
spec:
  replicas: 3
  selector:
    matchLabels:
      app: iis
  template:
    metadata:
      labels:
        app: iis
    spec:
      containers:
        - name: iis
          image: hizmailovich/iis@sha256:8ba8bee31b126a9bc661db9b42d1c49320d429376b37a3617dabea999cac28bb
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
