src/infra/pg-stateful.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
spec:
  serviceName: postgres
  replicas: 3
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: app-pg
          image: postgres:15-alpine
          imagePullPolicy: Always
          ports:
            - containerPort: 5432
      volumes:
        - name: postgres-db-disk
          hostPath:
            path: /data
  volumeClaimTemplates:
    - metadata:
        name: postgres-db-disk
      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: 1Gi
