src/infra/iis-service.yml
apiVersion: v1
kind: Service
metadata:
  name: iis
spec:
  type: NodePort
  selector:
    app: iis
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30200
